--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.js"
+    "dev-server": "nodemon src/index.js",
+    "dev-client": "webpack-dev-server"
   },
   "keywords": [
     "reactjs",
@@ -19,13 +20,26 @@
   "author": "cicconewk",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "mongoose": "^5.5.1",
-    "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "timeago.js": "^4.0.0-beta.2"
   },
   "devDependencies": {
-    "nodemon": "^1.18.11"
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.18.11",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.1"
   }
 }
