--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-server": "nodemon src/index.js",
-    "dev-client": "webpack-dev-server"
+    "dev-server": "nodemon src/server/index.js",
+    "dev-client": "webpack-dev-server",
+    "build": "webpack"
   },
   "keywords": [
     "reactjs",
